From Henning Petersen in PR # 44641: C99 primitive type 'bool' used as a variable name. Also small KNF, as in FreeBSD.